--- a/styles/reset.css
+++ b/styles/reset.css
@@ -8,8 +8,7 @@
 
 * {
     padding: 0px; margin: 0px;
-
-    line-height: 1.15;
+    line-height: 1.15em;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     font-size: 100%;
